SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Entitled_Processed_Up__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Processed_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitled Processed Up</label>
    <type>Checkbox</type>
</CustomField>