SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Incremental_ARR__c.field-meta.xml
<CustomField>
    <fullName>Incremental_ARR__c</fullName>
    <label>Incremental ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>