SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>AND(
TODAY()&gt;=Start_Date__c, 
TODAY()&lt;End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive?</label>
    <type>Checkbox</type>
</CustomField>