SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/MAUs__c.field-meta.xml
<CustomField>
    <fullName>MAUs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total allowed MAUs for this plan</description>
    <inlineHelpText>Total allowed MAUs for this plan - this will automatically update based on the Product unless a custom plan is selected.</inlineHelpText>
    <label>MAUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>