SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>MRR calculation</description>
    <formula>UnitPrice / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Divides the ARR by 12 months</inlineHelpText>
    <label>MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>