SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>TEXT( Opportunity.StageName )</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>