SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>