SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Provision_Last_Sync_Failure_Date__c.field-meta.xml
<CustomField>
    <fullName>Provision_Last_Sync_Failure_Date__c</fullName>
    <label>Provision Last Sync Failure Date</label>
    <type>DateTime</type>
</CustomField>