SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Provision_Last_Sync_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Provision_Last_Sync_Request_Id__c</fullName>
    <externalId>true</externalId>
    <label>Provision Last Sync Request Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>