SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Provision_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Provision_Sync_Status__c</fullName>
    <label>Provision Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Success Removed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>