SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewable</label>
    <type>Checkbox</type>
</CustomField>