SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Renewable_Product__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Product__c</fullName>
    <formula>PricebookEntry.Product2.DealHub_Is_Renewable__c</formula>
    <label>Renewable Product</label>
    <type>Checkbox</type>
</CustomField>