SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>