SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Stripe_LineItem_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_LineItem_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Line Item ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>