SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial</label>
    <type>Checkbox</type>
</CustomField>