SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/Trial_Product__c.field-meta.xml
<CustomField>
    <fullName>Trial_Product__c</fullName>
    <formula>PricebookEntry.Product2.Trial_Product__c</formula>
    <label>Trial Product</label>
    <type>Checkbox</type>
</CustomField>