SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/fields/True_List_Price__c.field-meta.xml
<CustomField>
    <fullName>True_List_Price__c</fullName>
    <label>True List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>