SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/validationRules/Closed_Won_Cannot_Be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Cannot_Be_Edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(contains( $Profile.Name, &quot;Admin&quot;)),
NOT(contains( $Profile.Name, &quot;Finance&quot;)),
ISPICKVAL(Opportunity.StageName , &quot;CW - Closed Won&quot;)
)</errorConditionFormula>
    <errorMessage>Opportunity is Closed Won and Products should only be modified by a System Administrator.</errorMessage>
</ValidationRule>