SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/validationRules/End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e41000000iufw&quot;,
ISPICKVAL(Opportunity.StageName, &quot;7W - Closed Won&quot;),
ISBLANK( End_Date__c )
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date Required</errorMessage>
</ValidationRule>