SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/validationRules/Order_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e41000000iufw&quot;,
ISPICKVAL(Opportunity.StageName, &quot;7W - Closed Won&quot;),
ISBLANK( Order_Quantity__c )
)</errorConditionFormula>
    <errorDisplayField>Order_Quantity__c</errorDisplayField>
    <errorMessage>Order Quantity is Required</errorMessage>
</ValidationRule>