SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/validationRules/Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e41000000iufw&quot;,
ISPICKVAL(Opportunity.StageName, &quot;7W - Closed Won&quot;),
ISBLANK( Start_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date Required</errorMessage>
</ValidationRule>