SFDC_LD_Packages/objects-layouts/main/default/objects/OpportunityLineItem/validationRules/Start_Date_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Start Date must be before End Date</errorMessage>
</ValidationRule>